--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="#about" class="link">About</a>
             </li>
             <li class="item font-16px">
-              <a href="https://devnamdev2003.github.io/img/resume.png" class="link">Resume</a>
+              <a href="https://drive.google.com/file/d/1HhqklmCai1bkZc1HZT04w8I-CV32rkYr" class="link">Resume</a>
             </li>
           </ul>
         </div>
