--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <img src="https://devnamdev2003.github.io/img/icon/mail.png" alt="" class="icon_mail" />
               <span class="mail">
                 <span>
-                  <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKhpXpgrMSbvLdFxptWXfXNwWtVGsGwnNrwTqsKMndhdDCBdWXVwGtNjZwnCfvpKwNvlgjt" class="link">jayspatel1510@gmail.com
+                  <a href="mailto:jayspatel1510@gmail.com" class="link">jayspatel1510@gmail.com
                   </a>
                 </span>
               </span>
