--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="#about" class="link">About</a>
             </li>
             <li class="item font-16px">
-              <a href="https://drive.google.com/file/d/1HhqklmCai1bkZc1HZT04w8I-CV32rkYr" class="link">Resume</a>
+              <a href="https://devnamdev2003.github.io/img/resume.png" class="link">Resume</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,7 @@
                 <a href="#about" class="link">About</a>
               </li>
               <li class="btn btn3 font-16px">
-                <a href="https://devnamdev2003.github.io/img/resume.png" class="link">Resume</a>
+                <a href="https://drive.google.com/file/d/1HhqklmCai1bkZc1HZT04w8I-CV32rkYr" class="link">Resume</a>
               </li>
             </ol>
           </div>
@@ -71,7 +71,7 @@
         <div class="about_des">
           <div class="about_img">
             <div class="img">
-              <img id="light" src="" alt="" />
+              <img id="light" src="img/img.jpeg" alt="" />
             </div>
           </div>
           <div class="about_para">
@@ -94,12 +94,12 @@
               <br />
               <span class="call">
                 <img src="https://devnamdev2003.github.io/img/icon/call.png" alt="" class="icon_call" />
-                <span>+91 9904497646</span>
+                <span><a href="tel:9904497646">+91 9904497646</a></span>
               </span>
               <br />
               <img src="https://devnamdev2003.github.io/img/icon/location.png" alt="" class="icon_location" />
               <span id="icon_location">
-                <a href="https://www.google.co.in/maps/place/Shivpuri,+Madhya+Pradesh+473551/@25.4333819,77.629029,13z/data=!3m1!4b1!4m5!3m4!1s0x3970b95555322f1f:0x8d96b4e080b30b5c!8m2!3d25.4320478!4d77.6643815" class="link">Ahmedabad, Gujarat, India
+                <a href="" class="link">Ahmedabad, Gujarat, India
                 </a>
               </span>
             </div>
@@ -167,6 +167,16 @@
           <h1>Skills</h1>
         </div>
         <div class="skill">
+          <span class="skill_span">
+            <p class="django">React</p>
+            <br />
+            <span class="name">ReactJs</span>
+          </span>
+          <span class="skill_span">
+            <p class="django">Angular</p>
+            <br />
+            <span class="name">AngularJs</span>
+          </span>
           <span class="skill_span span1">
             <img src="https://img.icons8.com/nolan/64/00C6FF/0072FF/c-plus-plus.png" alt="c++_icon" />
             <br />
@@ -232,8 +242,6 @@
             <br />
             <span class="name">Django</span>
           </span>
-          
-          
         </div>
       </div>
     </div>
@@ -450,7 +458,7 @@
             <textarea id="id_message" name="message" rows="4" cols="50" maxlength="500" required></textarea>
           </div>
           <div class="submit_btn">
-            <button class="btn_pro github" type="submit">Submit</button>
+            <button class="btn_pro github" href="mailto:jayspatel1510@gmail.com" type="submit">Submit</button>
           </div>
         </form>
       </div>
