--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <div class="about_para">
             <div>
               <p>
-                Hello! I'm a skilled Python and ReactJs developer, with a passion for building powerful web applications. I
+                Hello! I'm a skilled Python and ReactJs developer, with a passion for building powerful web
+                applications. I
                 specialize in backend development with Django and am also proficient in front-end technologies and DOM
                 manipulation. With a strong background in logic building, I'm dedicated to delivering top-quality
                 results and meeting project deadlines. Follow me for insights on web development and updates on my
@@ -253,35 +254,38 @@
     <div class="new_project" id="project">
       <div class="new_pro_head">
         <h1>Projects</h1>
+        <hr>
       </div>
       <div class="new_projects">
         <div class="new_pro1">
-          <div class="new_pro_img">
+          <div class="new_pro_img new_pro3_img">
+            <br /><br /><br /><br />
             <div class="outer_iframe">
-              <div class="iframe-embed-wrapper iframe-embed-responsive-16by9">
-                <iframe id="light" class="iframe-embed" title="youtube video" src="https://www.youtube.com/youhub/" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-                </iframe>
+              <div id="light">
+                <a href="">
+                  <img style="width: 100%;" src="img/eshop.png" alt="rgpv">
+                </a>
               </div>
             </div>
           </div>
           <div class="new_pro_des">
             <div>
+              <br /><br />
               <h3>
-                Get results of all students using web scraping and automation
+                E-shop Web-application
               </h3>
               <p>
-                <span> Aim:</span> This project aims to get the result of all
-                the students in one goes instead of getting them one by one.
-                and also stores those marks in an excel file.
+                <span> Aim:</span> The aim of an e-commerce application is to provide a user-friendly online platform
+                for buying and selling products or services, facilitating seamless transactions, and enhancing the
+                overall shopping experience.
                 <br />
                 <br />
-                <span> Technology used:</span> Python, Libraries (Selenium,
-                Beautiful Soup, image, time, OS), Tesseract-OCR, WebDriver
-                (chromedriver).
+                <span> Technology used:</span> Python-Django, Html, CSS.
                 <br />
                 <br />
-                <span> Deal with:</span> Captcha handling, File handling,
-                Exception Handling, Web Scraping, and Web Automation.
+                <span> Deal with:</span> Dealing in project making involves planning, development, testing,
+                collaboration, and ongoing management to ensure successful project outcomes, meeting stakeholder needs
+                and expectations throughout its lifecycle.
               </p>
               <div class="pro_btn">
                 <div class="btn_pro github">
@@ -301,20 +305,23 @@
         <hr />
         <div class="new_pro2">
           <div class="new_pro2_img new_pro4_img">
+            <br /><br /><br /><br />
             <div class="outer_iframe ">
-              <a href="https://chat-di.onrender.com"> <img id="light" style="width: 100%; border:none" src="https://devnamdev2003.github.io/img/chat.png" alt="rgpv"></a>
+              <a href="https://jp46684668.wixsite.com/servicesatfingertips"> <img id="light"
+                  style="width: 100%; border:none" src="img/service.png" alt="rgpv"></a>
             </div>
           </div>
           <div class="new_pro2_des">
+            <br /><br />
             <div>
-              <h3>ChatBot: AI-Powered Conversations with OpenAI</h3>
+              <h3>Services at Fingertips</h3>
               <p>
-                <span> Aim:</span> ChatBot is an interactive chat application powered by Django and OpenAI's
-                GPT-3.5-turbo model. Engage in natural conversations and receive intelligent responses in real-time.
-                Explore the future of intelligent chat applications with ChatBot.
+                <span> Aim:</span> The aim of online service providers like Urban Company is to connect customers with
+                skilled professionals for convenient, efficient, and reliable services, enhancing the overall customer
+                experience.
                 <br />
                 <br />
-                <span> Technology used:</span> Python, Django, OpenAI.
+                <span> Technology used:</span> Wix.
                 <br />
                 <br />
                 <span> Deal with:</span> ChatBot is an interactive chat application developed using Django and Python.
@@ -339,30 +346,31 @@
         <hr>
         <div class="new_pro1">
           <div class="new_pro_img new_pro3_img">
+            <br /><br /><br /><br />
             <div class="outer_iframe">
               <div id="light">
                 <a href="https://rgpv-result.onrender.com/">
-                  <img style="width: 100%;" src="https://devnamdev2003.github.io/img/rgpv.jpeg" alt="rgpv">
+                  <img style="width: 100%;" src="img/face.png" alt="rgpv">
                 </a>
               </div>
             </div>
           </div>
           <div class="new_pro_des">
             <div>
+              <br /><br />
               <h3>
-                College Student Result Viewer with Server Communication using Python and Django </h3>
+                Face Detection Using Python </h3>
               <p>
-                <span> Aim:</span> The College Student Result Viewer with Server Communication is a web application that
-                enables students to check their academic performance by directly communicating with the college server
-                using HTTP requests. The application is developed using Python and Django web development frameworks.
+                <span> Aim:</span> The aim of face detection is to identify and locate human faces within images or
+                video frames, enabling various applications such as security, facial recognition, and content tagging.
                 <br />
                 <br />
-                <span> Technology used:</span> Python, Django, HTTP Request Library
+                <span> Technology used:</span> Python.
                 <br />
                 <br />
-                <span> Deal with:</span> I have integrated the HTTP request library, parsed the server's response, and
-                used the Django web framework to create a cohesive application that retrieves and displays student
-                results.
+                <span> Deal with:</span> Dealing with a face detection project involves tasks such as data collection,
+                model training, algorithm development, testing, and integration into applications for accurate and
+                efficient face identification and tracking.
               </p>
               <div class="pro_btn">
                 <div class="btn_pro github">
@@ -371,7 +379,8 @@
                   </a>
                 </div>
                 <div class="btn_pro github">
-                  <a href="https://github.com/devnamdev2003/Rgpv_result_checker_application" target="_blank" class="link" rel="noopener">
+                  <a href="https://github.com/devnamdev2003/Rgpv_result_checker_application" target="_blank"
+                    class="link" rel="noopener">
                     <span>github</span>
                   </a>
                 </div>
@@ -381,52 +390,33 @@
         </div>
         <hr>
         <div class="new_pro2">
-          <div class="new_pro2_img new_pro2_img2">
+          <div class="new_pro2_img new_pro2_img2"><br /><br /><br /><br />
             <div class="outer_iframe">
               <div class="img">
-                <div class="l_arrow">
-                  <p>
-                    <img src="https://img.icons8.com/nolan/50/00C6FF/0072FF/double-left.png" alt="left_icon" />
-                  </p>
-                </div>
-                <div class="r_arrow">
-                  <p>
-                    <img src="https://img.icons8.com/nolan/50/00C6FF/0072FF/double-right.png" alt="right_icon" />
-                  </p>
-                </div>
                 <div class="inner_img" id="light">
-                  <img src="https://devnamdev2003.github.io/img/Pc/1.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/2.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/3.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/4.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/5.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/6.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/7.png" alt="" />
-                  <img src="https://devnamdev2003.github.io/img/Pc/8.png" alt="" />
+                  <img src="img/tatvasoft.png" alt="" />
                 </div>
               </div>
             </div>
           </div>
           <div class="new_pro2_des">
             <div>
-              <h3>Personal computer Assistant</h3>
+              <br /><br />
+
+              <h3>Book Store website</h3>
               <p>
-                <span> Aim:</span> It is a general-purpose desktop-based
-                application software, that understands voice commands and
-                completes tasks or replies to queries said by the user.
+                <span> Aim:</span> A desktop-based application for a bookstore that offers general-purpose
+                functionality, capable of understanding and can perform tasks or respond to user queries
+                in a bookstore context.
                 <br />
                 <br />
-                <span> Technology used:</span> Technology used: Python,
-                Libraries (OS, pyttsx3, datetime, requests, webbrowser,
-                AppOpener, BeautifulSoup, SpeechRecognition).
+                <span> Technology used:</span> ReactJs, Html, CSS, Js, Material-Ui.
                 <br />
                 <br />
-                <span> Deal with:</span> sending text messages and mail
-                through voice command, File handling, general computer tasks
-                like restarting, shutdown, locking, playing videos on YouTube,
-                searching on Google, finding the temperature, opening any
-                application, and many more features will be added.
-              </p>
+                <span> Deal with:</span> A specialized bookstore desktop app, manages inventory,
+                processes orders, offers book recommendations, and assists customers, enhancing bookstore operations and
+                customer experience.
+              </p><br />
               <div class="pro_btn">
                 <div class="btn_pro github">
                   <a href="https://devnamdev2003.github.io/PC_Assistant/" target="_blank" class="link" rel="noopener">
@@ -502,7 +492,8 @@
         </a>
       </div>
       <div>
-        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
           <defs>
             <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
           </defs>
@@ -555,7 +546,6 @@
       event.target.reset();
     }
   </script>
-
 </body>
 
 </html>
