--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="about_des">
           <div class="about_img">
             <div class="img">
-              <img id="light" src="img.jpeg" alt="" />
+              <img id="light" src="img/img.jpeg" alt="" />
             </div>
           </div>
           <div class="about_para">
