--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
                 <span> Technology used:</span> Wix.
                 <br />
                 <br />
-                <span> Deal with:</span> ChatBot is an interactive chat application developed using Django and Python.
-                The web page provides a user-friendly chat interface where users can input their queries. The
-                application utilizes the power of OpenAI to generate intelligent and contextually relevant responses.
+                <span> Deal with:</span> Dealing in project making involves planning, development, testing,
+                collaboration, and ongoing management to ensure successful project outcomes, meeting stakeholder needs
+                and expectations throughout its lifecycle.
               </p>
               <div class="pro_btn">
                 <div class="btn_pro github">
