--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
       const email = emailInput.value;
       const message = messageInput.value;
       // Optionally, you can reset the form after handling the data
-      const endpoint = "https://sheetdb.io/api/v1/ydh15d2uel7qk";
+      const endpoint = "https://sheetdb.io/api/v1/vtg7hmby0m7dq";
       const data = {
         name: name,
         email: email,
