--- a/index.html
+++ b/index.html
@@ -434,30 +434,7 @@
         </div>
       </div>
     </div>
-    <div class="contact">
-      <div class="contact_inside">
-        <div class="contact_heading">
-          <h1>Contact</h1>
-        </div>
-        <form method="post" action="https://formsubmit.co/jp46684668@gmail.com" onsubmit="handleFormSubmit(event)">
-          <div class="name">
-            <label for="id_name">Name:</label>
-            <input type="text" id="id_name" name="name" maxlength="20" placeholder="Name" required>
-          </div>
-          <div class="email">
-            <label for="id_email">Email:</label>
-            <input type="email" id="id_email" name="email" maxlength="50" placeholder="Email" required>
-          </div>
-          <div class="message">
-            <label for="id_message">Message:</label>
-            <textarea id="id_message" name="message" rows="4" cols="50" maxlength="500" required></textarea>
-          </div>
-          <div class="submit_btn">
-            <button class="btn_pro github" href="mailto:jayspatel1510@gmail.com" type="submit">Submit</button>
-          </div>
-        </form>
-      </div>
-    </div>
+    <script src="https://sheetdb.io/s/f/jjg66ol9w4eys.js"></script>
     <div class="footer">
       <div class="link_icon">
         <div>
