--- a/index.html
+++ b/index.html
@@ -434,7 +434,16 @@
         </div>
       </div>
     </div>
-    <script src="https://sheetdb.io/s/f/jjg66ol9w4eys.js"></script>
+    
+
+<div class="contact">
+      <div class="contact_inside">
+        <div class="contact_heading">
+          <h1>Contact</h1>
+        </div>
+        <script src="https://sheetdb.io/s/f/jjg66ol9w4eys.js"></script>
+      </div>
+    </div>
     <div class="footer">
       <div class="link_icon">
         <div>
